# azure-cosmos-rust-nosql-api-samples

./: README.md
advanced-samples/cli/src/: main.rs
basic-samples/: Cargo.toml
basic-samples/container-crud/: Cargo.toml
basic-samples/container-crud/src/: main.rs
basic-samples/document-crud/: Cargo.toml
basic-samples/document-crud/src/: main.rs
